corrected repository link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 readme = "README.md"
 license = "MIT"
-repository = "https://github.com/baumbus/software-challenge-2025"
+repository = "https://github.com/baumbus/tree-xml"
 categories = ["parser-implementations", "parsing"]
 keywords = ["xml", "xml-parser", "treeview"]
 description = "XML parser with tree representation"
